# loggit

./: CMakeLists.txt  conanfile.py
include/loggit/: loggit.hpp
src/: libloggit.cpp  loggit.cpp
tests/: CMakeLists.txt  loggit.cpp
